--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=Challenge
-spring.datasource.url=jdbc:mysql://localhost/vollmed_api
-spring.datasource.username=root
-spring.datasource.password=Nofriegues1230
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
